--- a/src/styles/estilo.css
+++ b/src/styles/estilo.css
@@ -4,11 +4,8 @@
     padding:0;
     font-family: 'Open Sans';
 }
-header{
-    background: url(../assets/cartel.jpg);
-    background-size: cover;
-    background-position:center;
-    height: 300px;
+.custom-theme {
+    background-color: #5821be;
 }
 header h1{
     text-align: center;
