--- a/src/views/account.html
+++ b/src/views/account.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Interfaz de crear cuenta</title>
+  <title>Account</title>
   <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
   <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
   <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
@@ -14,13 +14,13 @@
   </style>
 </head>
 <body>
-  <div data-role="page">
+  <div data-role="page" class="custom-theme">
     <div data-role="header" data-position="fixed">
-      <h1>Logo</h1>
+      <h1>GAME VERSE</h1>
       <div class="ui-btn-right">
-        <a href="#" data-role="button" data-icon="search">Buscar</a>
-        <a href="#" data-role="button" data-icon="user">Cuenta</a>
-        <a href="#" data-role="button" data-icon="shop">Carrito</a>
+        <a href="index.html" class="ui-btn ui-shadow ui-corner-all ui-icon-search ui-btn-icon-notext">search</a>
+        <a href="login.html" class="ui-btn ui-shadow ui-corner-all ui-icon-user ui-btn-icon-notext">user</a>
+        <a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-shop ui-btn-icon-notext">shop</a>
       </div>
     </div>
     <div role="main" class="ui-content">
@@ -40,9 +40,6 @@
         </div>
         <button type="submit" data-role="button">Crear cuenta</button>
       </form>
-    </div>
-    <div data-role="footer" data-position="fixed">
-      <h4>Pie de página</h4>
     </div>
   </div>
 </body>
