Segundo push de diseño

--- a/src/styles/estilo.css
+++ b/src/styles/estilo.css
@@ -5,8 +5,9 @@
     font-family: 'Open Sans';
 }
 .custom-theme {
-    background-color: #5821be;
+    background-color: #5ec8cf;
 }
+
 header h1{
     text-align: center;
     font-size: 35px;
