--- a/src/views/account.html
+++ b/src/views/account.html
@@ -15,12 +15,12 @@
 </head>
 <body>
   <div data-role="page" class="custom-theme">
-    <div data-role="header" data-position="fixed">
-      <h1>GAME VERSE</h1>
-      <div class="ui-btn-right">
-        <a href="index.html" class="ui-btn ui-shadow ui-corner-all ui-icon-search ui-btn-icon-notext">search</a>
-        <a href="login.html" class="ui-btn ui-shadow ui-corner-all ui-icon-user ui-btn-icon-notext">user</a>
-        <a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-shop ui-btn-icon-notext">shop</a>
+    <div class="navbar" data-role="navbar" data-position="fixed">
+      <img src="../assets/logo2.png" alt="" width="10%" height="100px" style="margin:10px">
+      <div class="ui-btn-right custom-icons">
+        <a href="index.html" class="ui-btn ui-shadow ui-corner-all ui-icon-search ui-btn-icon-notext" style="width: 30px; height: 30px;">search</a>
+        <a href="login.html" class="ui-btn ui-shadow ui-corner-all ui-icon-user ui-btn-icon-notext" style="width: 30px; height: 30px;">user</a>
+        <a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-shop ui-btn-icon-notext" style="width: 30px; height: 30px;">shop</a>
       </div>
     </div>
     <div role="main" class="ui-content">
