Se agrego la API de mercado pago

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -115,7 +115,7 @@
           style="width: 30px; height: 30px;">search</a>
         <a href="/login" class="ui-btn ui-shadow ui-corner-all ui-icon-user ui-btn-icon-notext"
           style="width: 30px; height: 30px;">user</a>
-        <a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-shop ui-btn-icon-notext"
+        <a href="/carrito.ejs" class="ui-btn ui-shadow ui-corner-all ui-icon-shop ui-btn-icon-notext"
           style="width: 30px; height: 30px;">shop</a>
       </div>
     </div>
@@ -143,13 +143,6 @@
         </div>
       </div>
       <% }) %>
-
-
-
-
-
-
-
 </body>
 
 </html>
